package S191220109.task3;

public class Snake {

    private static Snake theSnake;

    public static Snake getTheSnake() {
        if (theSnake == null) {
            theSnake = new Snake();
        }
        return theSnake;
    }

    private Snake() {

    }

    private Sorter sorter;

    public void setSorter(Sorter sorter) {
        this.sorter = sorter;
    }

    public String lineUp(Line line) {

        String log = new String();

        if (sorter == null) {
            return null;
        }

        Linable[] linables = line.toArray();
        int[] ranks = new int[linables.length];

        for (int i = 0; i < linables.length; i++) {
            ranks[i] = linables[i].getValue();
        }

        sorter.load(ranks);
        sorter.sort();

        String[] sortSteps = this.parsePlan(sorter.getPlan());

        for (String step : sortSteps) {
            this.execute(step, line);
            System.out.println(line.toString());
            log += line.toString();
            log += "\n[frame]\n";
        }

        return log;

    }

    private String[] parsePlan(String plan) {
        return plan.split("\n");
    }

    private void execute(String step, Line line) {
        String[] couple = step.split("<->");
        int temp0 = Integer.parseInt(couple[0]), temp1 = Integer.parseInt(couple[1]);
        Monster monster0 = new Monster(0);
        Monster monster1 = new Monster(0);
        for (int i = 0; i < line.positions.length; ++i) {
            if (temp0 == line.get(i).rank())
                monster0 = line.get(i);
        }
        for (int i = 0; i < line.positions.length; ++i) {
            if (temp1 == line.get(i).rank())
                monster1 = line.get(i);
        }
        monster0.swapPosition(monster1);
    }

}
